fix footer aligning

--- a/src/app.scss
+++ b/src/app.scss
@@ -12,7 +12,7 @@ body {
 }
 
 .wrapper {
-  min-height: 90vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
